fall2014/workspace/.metadata/.plugins/org.eclipse.cdt.ui/midterm.build.log
17:31:00 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:88:7: error: expected ‘;’ before ‘}’ token
       }
       ^
make: *** [main.o] Error 1

17:31:00 Build Finished (took 162ms)

